heyclude.txt
Wrap step log (wrap.log)
  + chmod -R u+w Pods
  + chmod -R u+w ../node_modules/react-native
  + node ../scripts/wrap-cxx-headers.js
  TAMTAM: scanning Pods/Headers/Public, Pods/React-Core-prebuilt (cwd=/Users/runner/work/TAMTAM/TAMTAM/ios)
  TAMTAM: found 11876 .h/.hpp files
  TAMTAM: matched 5974 / 11876 ; patched 5974 ; skipped 0 ; errors 0
  TAMTAM: sample matched files:
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum-dtoa.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/cached-powers.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/diy-fp.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/double-conversion.h
  TAMTAM: target Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/node_modules/react-native/ReactCommon/react/renderer/components/view/BaseViewEventEmitter.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  TAMTAM: target Pods/Headers/Public/React-Core-prebuilt/yoga/YGEnums.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/React-Core-prebuilt/React.xcframework/Headers/Yoga/YGEnums.h
    seen-by-walk: true
    head:
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  TAMTAM: target Pods/Headers/Public/React-Core-prebuilt/yoga/YGMacros.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/React-Core-prebuilt/React.xcframework/Headers/Yoga/YGMacros.h
    seen-by-walk: true
    head:
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  TAMTAM: target Pods/Headers/Public/RCTTypeSafety/RCTTypeSafety/RCTTypedModuleConstants.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/node_modules/react-native/Libraries/TypeSafety/RCTTypedModuleConstants.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  TAMTAM: target Pods/Headers/Public/ReactCodegen/rnasyncstorage/rnasyncstorage.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/rnasyncstorage/rnasyncstorage.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
   *
  + echo '---- post-wrap check of BaseViewEventEmitter.h ----'
  ---- post-wrap check of BaseViewEventEmitter.h ----
  + head -5 Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:42:15: note: property declared here
      @objc var failureCallback: (_ error: String) -> Void {
                ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:391:22: warning: main actor-isolated property 'failureCallback' can not be referenced from a Sendable closure
                  self.failureCallback("Unable to decode the Lottie animation object from the fetched URL source: \(error.localizedDescription)")
                       ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/ContainerView.swift:42:15: note: property declared here
      @objc var failureCallback: (_ error: String) -> Void {
                ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:30:27: warning: will never be executed
                      print("Invalid view returned from registry, expecting ContainerView")
                            ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:29:30: note: condition always evaluates to false
                  if RCT_DEBUG == 1 {
                               ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/lottie-react-native/ios/LottieReactNative/AnimationViewManagerModule.swift:48:27: warning: will never be executed
  --
      
      /Applications/Xcode_26.0.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x objective-c -ivfsstatcache /Users/runner/work/TAMTAM/TAMTAM/ios/build/SDKStatCaches.noindex/iphoneos26.0-23A339-3885c01c3e6b6a337905948deab2002ee897cee61435230feef45a4748fd4bcc.sdkstatcache -fmessage-length\=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit\=0 -fno-color-diagnostics -fmodules-prune-interval\=86400 -fmodules-prune-after\=345600 -fbuild-session-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/build/ModuleCache.noindex/Session.modulevalidation -fmodules-validate-once-per-build-session -Wnon-modular-include-in-framework-module -Werror\=non-modular-include-in-framework-module -Wno-trigraphs -Wno-missing-field-initializers -Wno-missing-prototypes -Werror\=return-type -Wdocumentation -Wunreachable-code -Wno-implicit-atomic-properties -Werror\=deprecated-objc-isa-usage -Wno-objc-interface-ivars -Werror\=objc-root-class -Wno-arc-repeated-use-of-weak -Wimplicit-retain-self -Wduplicate-meth
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-location/ios/Requesters/EXBaseLocationRequester.m:39:5: error: call to undeclared function 'EXFatal'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
     39 |     EXFatal(EXErrorWithMessage(@"This app is missing usage descriptions, so location services will fail. Add one of the `NSLocation*UsageDescription` keys to your bundle's Info.plist. See https://bit.ly/3iLqy6S (https://docs.expo.dev/distribution/app-stores/#system-permissions-dialogs-on-ios) for more information."));
        |     ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-location/ios/Requesters/EXBaseLocationRequester.m:39:13: error: call to undeclared function 'EXErrorWithMessage'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
     39 |     EXFatal(EXErrorWithMessage(@"This app is missing usage descriptions, so location services will fail. Add one of the `NSLocation*UsageDescription` keys to your bundle's Info.plist. See https://bit.ly/3iLqy6S (https://docs.expo.dev/distribution/app-stores/#system-permissions-dialogs-on-ios) for more information."));
        |             ^
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-location/ios/Requesters/EXBaseLocationRequester.m:42:39: warning: 'authorizationStatus' is deprecated: first deprecated in iOS 14.0 [-Wdeprecated-declarations]
     42 |     systemStatus = [CLLocationManager authorizationStatus];
        |                                       ^~~~~~~~~~~~~~~~~~~
        |                                       authorizationStatus
  In module 'CoreLocation' imported from /Users/runner/work/TAMTAM/TAMTAM/node_modules/expo-location/ios/Requesters/EXBaseLocationRequester.h:3:
  /Applications/Xcode_26.0.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk/System/Library/Frameworks/CoreLocation.framework/Headers/CLLocationManager.h:224:1: note: 'authorizationStatus' has been explicitly marked deprecated here
Error: Process completed with exit code 1.